manifests/traefik/redirect-to-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https-middleware
  namespace: kube-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
