manifests/traefik/strip-prefix.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-middleware
  namespace: kube-system
spec:
  stripPrefix:
    prefixes:
      - /jellyfin
