manifests/traefik/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  ports:
    - name: traefik-port
      protocol: TCP
      port: 8080
      targetPort: traefik
  type: NodePort
