manifests/traefik/dashboard-tailnet-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard-ingress
  namespace: kube-system
spec:
  ingressClassName: tailscale
  rules:
  - host: traefik
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              name: traefik-port
  tls:
  - hosts:
    - traefik
